problemi con ciclo per rendere tutte le bombe rosse

--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
 
     <!-- MAIN -->
     <main>
-        <div class="container flex justify-align-center">
+        <div class="container flex-direction-column justify-align-center">
             <div class="wrapperbox none">
                 <div class="row">
                  
                 </div>
             </div>
+            <span id="windefeat"></span>
         </div>
+        
     </main>
 
     <!-- FOOTER -->
